trlte-common: Update power profile for Pie
* Match the changes made in LineageOS/android_frameworks_base@3d422c3

* Since Pie, AOSP is forcing us to define speeds and power values per CPU cluster.
  For single cluster chipsets like MSM8974, define cluster0 with only 4 cores
  to retain the existing behaviour.

Change-Id: Ida1edb9cc0335ffdb0ec6857da02b84a6a9d1633

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -17,10 +17,21 @@
         <value>8.3</value>
         <value>8.3</value>
     </array>
-    <array name="cpu.speeds">
-        <value>2649600</value>
-        <value>2572600</value>
-        <value>2496000</value>
+    <array name="cpu.core_speeds.cluster0">
+        <value>300000</value>
+        <value>422400</value>
+        <value>652800</value>
+        <value>729600</value>
+        <value>883200</value>
+        <value>960000</value>
+        <value>1036800</value>
+        <value>1190400</value>
+        <value>1267200</value>
+        <value>1497600</value>
+        <value>1574400</value>
+        <value>1728000</value>
+        <value>1958400</value>
+        <value>2265600</value>
         <value>2457600</value>
         <value>2265600</value>
         <value>1958400</value>
@@ -37,27 +48,26 @@
         <value>422400</value>
         <value>300000</value>
     </array>
-    <item name="cpu.idle">10</item>
-    <item name="cpu.awake">30</item>
-    <array name="cpu.active">
-        <value>362</value>
-        <value>335</value>
-        <value>293</value>
-        <value>284</value>
-        <value>245</value>
-        <value>198</value>
-        <value>169</value>
-        <value>162</value>
-        <value>137</value>
-        <value>116</value>
-        <value>108</value>
-        <value>95</value>
-        <value>87</value>
-        <value>66</value>
-        <value>59</value>
-        <value>54</value>
-        <value>42</value>
-        <value>34</value>
+    <item name="cpu.suspend">4.8</item>
+    <item name="wakeup.power">0.15</item>
+    <item name="cpu.idle">20.3</item>
+    <item name="cpu.clusters.cores">4</item>
+    <array name="cpu.core_power.cluster0">
+        <value>58</value>
+        <value>74</value>
+        <value>98</value>
+        <value>110</value>
+        <value>124</value>
+        <value>170</value>
+        <value>185</value>
+        <value>211</value>
+        <value>222</value>
+        <value>267</value>
+        <value>336</value>
+        <value>367</value>
+        <value>419</value>
+        <value>521</value>
+        <value>586</value>
     </array>
     <item name="battery.capacity">3220</item>
     <array name="wifi.batchedscan">
